hphp/hack/test/typecheck/expression_trees/nested_splicing2.php.exp
File "nested_splicing2.php", line 6, characters 20-23:
Splice syntax `${...}` cannot be nested. (Parsing[1002])
File "nested_splicing2.php", line 6, characters 20-23:
Typing error (Typing[4110])
  File "nested_splicing2.php", line 6, characters 20-23:
  Expected `Spliceable<_, _, _>` because this is being spliced into another Expression Tree
  File "nested_splicing2.php", line 6, characters 22-22:
  But got `int`
