hphp/hack/test/typecheck/expression_trees/nested_splicing2.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`${1 + ${4}}`;
}
